--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
 	"name": "fs.watcher",
 	"version": "1.0.0",
-	"description": "",
+	"keywords": [],
+	"homepage": "https://github.com/anzerr/fs.watcher#readme",
+	"bugs": {
+		"url": "https://github.com/anzerr/fs.watcher/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/anzerr/fs.watcher.git"
+	},
+	"license": "ISC",
+	"author": "anzerr",
 	"main": "index.js",
+	"types": "index.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"keywords": [],
-	"author": "anzerr",
-	"license": "ISC",
+	"eslintConfig": {
+		"extends": "eslint-config-basic"
+	},
 	"dependencies": {
 		"think.library": "git+https://git@github.com/anzerr/think.library.git",
 		"fs.promisify": "git+https://git@github.com/anzerr/fs.promisify.git"
@@ -17,19 +28,7 @@
 		"eslint": "^5.10.0",
 		"eslint-config-basic": "git+https://git@github.com/anzerr/eslintrc.git"
 	},
-	"eslintConfig": {
-		"extends": "eslint-config-basic"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/anzerr/fs.watcher.git"
-	},
 	"engines": {
 		"node": ">= 0.10.0"
-	},
-	"types": "index.d.ts",
-	"bugs": {
-		"url": "https://github.com/anzerr/fs.watcher/issues"
-	},
-	"homepage": "https://github.com/anzerr/fs.watcher#readme"
+	}
 }
