--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"linter": "eslint index.js src/**",
+		"test": "echo \"TODO\""
 	},
 	"eslintConfig": {
 		"extends": "eslint-config-basic"
