--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"think.library": "git+https://git@github.com/anzerr/think.library.git"
 	},
 	"devDependencies": {
+		"eslint": "^6.8.0",
 		"fs.mkdirp": "git+https://git@github.com/anzerr/fs.mkdirp.git",
 		"fs.remove": "git+https://git@github.com/anzerr/fs.remove.git",
 		"unique.util": "git+https://git@github.com/anzerr/unique.util.git",
