--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
-		"linter": "eslint index.js src/**",
 		"test": "echo 'skip for the moment'"
-	},
-	"eslintConfig": {
-		"extends": "eslint-config-basic"
 	},
 	"dependencies": {
 		"fs.promisify": "git+https://git@github.com/anzerr/fs.promisify.git",
@@ -34,11 +30,9 @@
 		"think.library": "git+https://git@github.com/anzerr/think.library.git"
 	},
 	"devDependencies": {
-		"eslint": "^6.8.0",
 		"fs.mkdirp": "git+https://git@github.com/anzerr/fs.mkdirp.git",
 		"fs.remove": "git+https://git@github.com/anzerr/fs.remove.git",
-		"unique.util": "git+https://git@github.com/anzerr/unique.util.git",
-		"eslint-config-basic": "git+https://git@github.com/anzerr/eslintrc.git"
+		"unique.util": "git+https://git@github.com/anzerr/unique.util.git"
 	},
 	"engines": {
 		"node": ">= 0.10.0"
